[DAQ-4925] fix writing string valued scannables
and add assertions to check relevant part of nexus file structure

Change-Id: I4b8da513dea835287fddb5abadff2b20cc5afe54